Google Maps added but not centered correctly

--- a/lunch-tyme/src/App.css
+++ b/lunch-tyme/src/App.css
@@ -126,8 +126,6 @@
 
 .map {
   height: 180px;
-  background-color: red;
-  padding-top: 60px;
 }
 
 .restaurant-name-header {
